@startuml

title __MODEL's Class Diagram__\n

  namespace springboot {
    namespace model {
      class springboot.model.Cart {
          - id : long
          - items : List<CartItem>
          + Cart()
          + Cart()
          + addItem()
          + getId()
          + getItems()
          + getOwner()
          + removeItem()
          + setId()
          + setItems()
          + setOwner()
          + toString()
      }
    }
  }
  

  namespace springboot {
    namespace model {
      class springboot.model.CartItem {
          - id : long
          - quantity : int
          + CartItem()
          + CartItem()
          + getCart()
          + getId()
          + getItemId()
          + getQuantity()
          + setCart()
          + setId()
          + setItemId()
          + setQuantity()
          + toString()
      }
    }
  }
  

  namespace springboot {
    namespace model {
      class springboot.model.Item {
          - description : String
          - id : long
          - name : String
          - stockQuantity : int
          + Item()
          + Item()
          + getDescription()
          + getId()
          + getName()
          + getShop()
          + getStockQuantity()
          + setDescription()
          + setId()
          + setName()
          + setShop()
          + setStockQuantity()
          + toString()
      }
    }
  }
  

  namespace springboot {
    namespace model {
      class springboot.model.Owner {
          - email : String
          - firstName : String
          - id : long
          - lastName : String
          - ownedShops : List<Shop>
          - password : String
          + Owner()
          + Owner()
          + addShop()
          + getEmail()
          + getFirstName()
          + getId()
          + getLastName()
          + getOwnedShops()
          + getPassword()
          + getPersonalCart()
          + isMerchant()
          + removeShop()
          + setEmail()
          + setFirstName()
          + setId()
          + setLastName()
          + setOwnedShops()
          + setPassword()
          + setPersonalCart()
          + toString()
      }
    }
  }
  

  namespace springboot {
    namespace model {
      class springboot.model.Shop {
          - description : String
          - id : long
          - name : String
          - products : List<Item>
          - tags : List<String>
          + Shop()
          + Shop()
          + getDescription()
          + getId()
          + getName()
          + getOwner()
          + getProducts()
          + getTags()
          + setDescription()
          + setId()
          + setName()
          + setOwner()
          + setProducts()
          + setTags()
          + toString()
      }
    }
  }
  

  springboot.model.Cart o-- springboot.model.Owner : owner
  springboot.model.CartItem o-- springboot.model.Cart : cart
  springboot.model.CartItem o-- springboot.model.Item : itemId
  springboot.model.Item o-- springboot.model.Shop : shop
  springboot.model.Owner o-- springboot.model.Cart : personalCart
  springboot.model.Shop o-- springboot.model.Owner : owner


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
